# aspen-wasm-plugin

./: Cargo.toml  flake.nix
crates/aspen-wasm-plugin/: Cargo.toml
crates/aspen-wasm-plugin/src/: events.rs  handler.rs  host.rs  lib.rs  marshal.rs  registry.rs  scheduler.rs
crates/aspen-wasm-plugin/tests/: wasm_plugin_integration.rs
