[package]
name = "aspen-wasm-plugin"
version = "0.1.0"
edition = "2024"
description = "Host-side WASM plugin runtime for Aspen RPC handlers"
license = "AGPL-3.0-or-later"

[dependencies]
# RPC core abstractions (RequestHandler trait, ClientProtocolContext)
aspen-rpc-core = { path = "../../../aspen-rpc/crates/aspen-rpc-core", features = ["blob"] }

# Local crates
aspen-client-api = { path = "../../../aspen-client-api/crates/aspen-client-api" }
aspen-core = { path = "../../../aspen/crates/aspen-core" }
aspen-blob = { path = "../../../aspen/crates/aspen-blob" }
aspen-constants = { path = "../../../aspen-constants/crates/aspen-constants" }
aspen-plugin-api = { path = "../../../aspen-plugin-api/crates/aspen-plugin-api" }
aspen-kv-types = { path = "../../../aspen-kv-types/crates/aspen-kv-types" }
aspen-traits = { path = "../../../aspen-traits/crates/aspen-traits" }

# Hyperlight WASM sandbox
hyperlight-wasm = "0.12"

# Wasmtime for AOT precompilation (must match wasm_runtime's wasmtime version)
# Hyperlight-wasm 0.12 uses Module::deserialize inside the sandbox guest,
# so WASM modules must be precompiled to AOT artifacts on the host side.
wasmtime = { version = "36.0.3", default-features = false, features = ["cranelift"] }

# Iroh blob hashes and crypto
iroh-blobs = "0.97"
iroh = "0.95.1"

# HLC timestamps
aspen-hlc = { path = "../../../aspen-hlc/crates/aspen-hlc" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async/trait support
async-trait = "0.1"
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync"] }

# Logging
tracing = "0.1"

# Randomness for guest plugins
getrandom = "0.2"

# Ed25519 verification
ed25519-dalek = "2.1"

# Hex encoding for public keys
hex = "0.4"

# Hook service (optional, for hook management host functions)
aspen-hooks = { path = "../../../aspen-hooks/crates/aspen-hooks", optional = true }
aspen-hooks-types = { path = "../../../aspen-hooks/crates/aspen-hooks-types", optional = true }

[features]
default = []
testing = []
sql = ["aspen-rpc-core/sql", "aspen-core/sql"]
hooks = ["dep:aspen-hooks", "dep:aspen-hooks-types", "aspen-rpc-core/hooks"]

[dev-dependencies]
aspen-testing = { path = "../../../aspen/crates/aspen-testing" }
aspen-rpc-core = { path = "../../../aspen-rpc/crates/aspen-rpc-core", features = ["blob", "testing"] }
aspen-client-api = { path = "../../../aspen-client-api/crates/aspen-client-api" }
tokio = { version = "1.0", features = ["full", "test-util"] }
